--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="./../../phpunit/phpunit/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="./../../../phpunit/phpunit/phpunit.xsd"
          colors="true"
          cacheResult="false"
          failOnRisky="true"
@@ -18,6 +18,6 @@
         <extension class="Hanaboso\PhpCheckUtils\PhpUnit\Hooks\FinalMockHook"/>
     </extensions>
 
-    <coverage cacheDirectory="./../../../var/coverageCache">
+    <coverage cacheDirectory="./../var/coverageCache">
     </coverage>
 </phpunit>
