--- a/phpstan.neon
+++ b/phpstan.neon
@@ -28,6 +28,9 @@ parameters:
 		- '#Call to an undefined method Doctrine\\Common\\Persistence\\ObjectRepository::*.#' # remove after better doctrine support
 		- '#Call to an undefined method Doctrine\\ORM\\EntityRepository::*.#' # remove after better doctrine support
 		- '#Call to an undefined method Doctrine\\ODM\\MongoDB\\DocumentRepository::*.#' # remove after better doctrine support
+		- '#Return type of call to method PHPUnit\\Framework\\TestCase::createMock\(\) contains unresolvable type.#'
+		- '#Return type of call to method PHPUnit\\Framework\\TestCase::createPartialMock\(\) contains unresolvable type.#'
+		- '#Property .* is never written, only read#'
 	ergebnis:
 		allowAbstractClasses: true
 		classesAllowedToBeExtended:
