--- a/phpstan.neon
+++ b/phpstan.neon
@@ -24,12 +24,11 @@ parameters:
 	reportUnmatchedIgnoredErrors: false
 	ignoreErrors:
 		- '#Expression \"\$.*\" on a separate line does not do anything\.#'
-		- '#Call to an undefined method React\\Promise\\PromiseInterface::(otherwise|done|cancel|reject)\(\)\.#' # remove after install react/promises 3.0
 		- '#Call to an undefined method Doctrine\\Common\\Persistence\\ObjectRepository::*.#' # remove after better doctrine support
 		- '#Call to an undefined method Doctrine\\ORM\\EntityRepository::*.#' # remove after better doctrine support
 		- '#Call to an undefined method Doctrine\\ODM\\MongoDB\\DocumentRepository::*.#' # remove after better doctrine support
-		- '#Return type of call to method PHPUnit\\Framework\\TestCase::createMock\(\) contains unresolvable type.#'
-		- '#Return type of call to method PHPUnit\\Framework\\TestCase::createPartialMock\(\) contains unresolvable type.#'
+		- '#Return type of call to method PHPUnit\\Framework\\TestCase\:\:createMock\(\) contains unresolvable type.#'
+		- '#Return type of call to method PHPUnit\\Framework\\TestCase\:\:createPartialMock\(\) contains unresolvable type.#'
 		- '#Property .* is never written, only read#'
 	ergebnis:
 		allowAbstractClasses: true
