--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
     "license": "MIT",
-    "version": "1.3.9",
+    "version": "1.4.0",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-apcu": "*",
         "ext-json": "*",
         "ext-pcov": "*",
@@ -31,7 +31,7 @@
         "ergebnis/phpstan-rules": "^1.0",
         "php-mock/php-mock-phpunit": "^2.6",
         "phpstan/phpstan": "^1.4",
-        "phpstan/phpstan-doctrine": "^1.1",
+        "phpstan/phpstan-doctrine": "^1.2",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpstan/phpstan-strict-rules": "^1.1",
         "phpstan/phpstan-symfony": "^1.1",
@@ -65,8 +65,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "PHP_CodeSniffer\\": "vendor/squizlabs/php_codesniffer/src",
-            "Hanaboso\\TestsPhpCheckUtils\\": "tests"
+            "Hanaboso\\TestsPhpCheckUtils\\": "tests",
+            "PHP_CodeSniffer\\": "vendor/squizlabs/php_codesniffer/src"
         }
     }
 }
