--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
     "license": "MIT",
-    "version": "1.4.7",
+    "version": "1.4.8",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -25,29 +25,29 @@
         "ext-apcu": "*",
         "ext-json": "*",
         "ext-pcov": "*",
-        "brianium/paratest": "^v6.6",
-        "dg/bypass-finals": "^v1.3",
-        "ergebnis/composer-normalize": "^2.28",
+        "brianium/paratest": "^v6.8",
+        "dg/bypass-finals": "^v1.4",
+        "ergebnis/composer-normalize": "^2.29",
         "ergebnis/phpstan-rules": "^1.0",
         "php-mock/php-mock-phpunit": "^2.6",
-        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-doctrine": "^1.3",
-        "phpstan/phpstan-phpunit": "^1.1",
-        "phpstan/phpstan-strict-rules": "^1.3",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-strict-rules": "^1.4",
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
-        "slevomat/coding-standard": "^8.3",
-        "spaze/phpstan-disallowed-calls": "^v2.4",
+        "slevomat/coding-standard": "^8.8",
+        "spaze/phpstan-disallowed-calls": "^v2.11",
         "squizlabs/php_codesniffer": "^3.7",
-        "symfony/browser-kit": "^v6.1",
-        "symfony/framework-bundle": "^v6.1",
-        "symfony/security-core": "^v6.1"
+        "symfony/browser-kit": "^v6.2",
+        "symfony/framework-bundle": "^v6.2",
+        "symfony/security-core": "^v6.2"
     },
     "require-dev": {
         "doctrine/mongodb-odm": "^2.4",
-        "doctrine/orm": "^2.12",
-        "friendsoftwig/twigcs": "^v6.0",
-        "phpstan/phpstan-nette": "^1.0"
+        "doctrine/orm": "^2.14",
+        "friendsoftwig/twigcs": "^v6.1",
+        "phpstan/phpstan-nette": "^1.2"
     },
     "suggest": {
         "apitte/core": "Install me, if you need to use ControllerTestTrait in Nette.",
@@ -67,6 +67,12 @@
         "psr-4": {
             "Hanaboso\\TestsPhpCheckUtils\\": "tests",
             "PHP_CodeSniffer\\": "vendor/squizlabs/php_codesniffer/src"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "ergebnis/composer-normalize": true
         }
     }
 }
