--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
     "license": "MIT",
-    "version": "1.5.3",
+    "version": "1.5.4",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -25,9 +25,9 @@
         "ext-apcu": "*",
         "ext-json": "*",
         "ext-pcov": "*",
-        "brianium/paratest": "^v7.1",
+        "brianium/paratest": "^v7.2",
         "dg/bypass-finals": "^v1.4",
-        "ergebnis/composer-normalize": "^2.31",
+        "ergebnis/composer-normalize": "^2.34",
         "ergebnis/phpstan-rules": "^2.0",
         "php-mock/php-mock-phpunit": "^2.7",
         "phpstan/phpstan": "^1.10",
@@ -35,9 +35,9 @@
         "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-strict-rules": "^1.5",
         "phpstan/phpstan-symfony": "^1.3",
-        "phpunit/phpunit": "^10.2",
-        "slevomat/coding-standard": "^8.12",
-        "spaze/phpstan-disallowed-calls": "^v2.15",
+        "phpunit/phpunit": "10.2.7",
+        "slevomat/coding-standard": "^8.13",
+        "spaze/phpstan-disallowed-calls": "^v2.16",
         "squizlabs/php_codesniffer": "^3.7",
         "symfony/browser-kit": "^v6.3",
         "symfony/framework-bundle": "^v6.3",
@@ -45,7 +45,7 @@
     },
     "require-dev": {
         "doctrine/mongodb-odm": "^2.5",
-        "doctrine/orm": "^2.15",
+        "doctrine/orm": "^2.16",
         "friendsoftwig/twigcs": "^v6.2",
         "phpstan/phpstan-nette": "^1.2"
     },
