--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
     "license": "MIT",
-    "version": "1.5.4",
+    "version": "1.5.5",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -26,16 +26,16 @@
         "ext-json": "*",
         "ext-pcov": "*",
         "brianium/paratest": "^v7.2",
-        "dg/bypass-finals": "^v1.4",
-        "ergebnis/composer-normalize": "^2.34",
-        "ergebnis/phpstan-rules": "^2.0",
+        "dg/bypass-finals": "^v1.5",
+        "ergebnis/composer-normalize": "^2.35",
+        "ergebnis/phpstan-rules": "^2.1",
         "php-mock/php-mock-phpunit": "^2.7",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-strict-rules": "^1.5",
         "phpstan/phpstan-symfony": "^1.3",
-        "phpunit/phpunit": "10.2.7",
+        "phpunit/phpunit": "^10.3.2",
         "slevomat/coding-standard": "^8.13",
         "spaze/phpstan-disallowed-calls": "^v2.16",
         "squizlabs/php_codesniffer": "^3.7",
