--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hanaboso/php-check-utils",
     "description": "Utils for php development - CodeSniffer, PhpStan, PhpUnit, PhpStorm",
     "license": "MIT",
-    "version": "1.5.6",
+    "version": "1.5.7",
     "authors": [
         {
             "name": "Hanaboso s.r.o.",
@@ -25,11 +25,11 @@
         "ext-apcu": "*",
         "ext-json": "*",
         "ext-pcov": "*",
-        "brianium/paratest": "^v7.3",
-        "dg/bypass-finals": "^v1.5",
-        "ergebnis/composer-normalize": "^2.39",
+        "brianium/paratest": "^7.3",
+        "dg/bypass-finals": "^1.5",
+        "ergebnis/composer-normalize": "^2.41",
         "ergebnis/phpstan-rules": "^2.1",
-        "php-mock/php-mock-phpunit": "^2.8",
+        "php-mock/php-mock-phpunit": "^2.9",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.3",
@@ -37,16 +37,16 @@
         "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^10.5",
         "slevomat/coding-standard": "^8.14",
-        "spaze/phpstan-disallowed-calls": "^v2.16",
-        "squizlabs/php_codesniffer": "^3.7",
-        "symfony/browser-kit": "^v7.0",
-        "symfony/framework-bundle": "^v7.0",
-        "symfony/security-core": "^v7.0"
+        "spaze/phpstan-disallowed-calls": "^3.0",
+        "squizlabs/php_codesniffer": "^3.8",
+        "symfony/browser-kit": "^7.0",
+        "symfony/framework-bundle": "^7.0",
+        "symfony/security-core": "^7.0"
     },
     "require-dev": {
         "doctrine/mongodb-odm": "^2.6",
         "doctrine/orm": "^2.17",
-        "friendsoftwig/twigcs": "^v6.3",
+        "friendsoftwig/twigcs": "^6.4",
         "phpstan/phpstan-nette": "^1.2"
     },
     "suggest": {
