--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -25,13 +25,19 @@ parameters:
 		- identifier: ternary.shortNotAllowed
 		- '#Expression \"\$.*\" on a separate line does not do anything\.#'
 		- '#T_ANON_CLASS#'
+		- '#T_CLOSE_CURLY_BRACKET#'
+		- '#T_COMMA#'
 		- '#T_DOC_COMMENT_CLOSE_TAG#'
 		- '#T_DOC_COMMENT_OPEN_TAG#'
 		- '#T_DOC_COMMENT_STRING#'
 		- '#T_DOC_COMMENT_TAG#'
 		- '#T_DOC_COMMENT_WHITESPACE#'
-		- '#T_STRING_CONCAT#'
+		- '#T_NAME_FULLY_QUALIFIED#'
+		- '#T_NAME_QUALIFIED#'
+		- '#T_NAME_RELATIVE#'
 		- '#T_OPEN_SHORT_ARRAY#'
+		- '#T_SELF#'
+		- '#T_STRING_CONCAT#'
 		- '#file_put_contents\(\) is forbidden#'
 		- '#file_get_contents\(\) is forbidden#'
 		- '#json_encode\(\) is forbidden#'
